# bail

./: .gitmodules  CMakeLists.txt  README.md
scripts/: license.py
src/: main.cpp
src/ecs/: aliases.hpp  componentstorage.hpp  concepts.hpp  entitymanager.cpp  entitymanager.hpp  query.hpp  system.hpp  systemmanager.cpp  systemmanager.hpp
src/systems/: input.cpp  input.hpp
